--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -1,6 +1,6 @@
 <section class="container criar-pensamentos ff-inter">
   <header class="header">
-    <h2>Adicione um <br>pensamento novo:</h2>
+    <h2>Adicione um <br />pensamento novo:</h2>
   </header>
   <form [formGroup]="formulario">
     <label for="pensamento">Pensamento</label>
@@ -10,10 +10,10 @@
       id="pensamento"
       formControlName="conteudo"
       placeholder="Digite o pensamento"
-
-
-
-    >
+    />
+    <div class="mensagem__erro" *ngIf="formulario.get('conteudo')?.errors  && formulario.get('conteudo')?.touched">
+      Pensamento é obrigatório!
+    </div>
     <label for="autoria">Autoria ou fonte</label>
     <input
       type="text"
@@ -21,9 +21,13 @@
       id="autoria"
       formControlName="autoria"
       placeholder="Digite a autoria ou fonte"
-
-
-    >
+    />
+    <div class="mensagem__erro" *ngIf="formulario.get('autoria')?.errors?.['required'] && formulario.get('autoria')?.touched">
+      Autoria é obrigatório!
+    </div>
+    <div class="mensagem__erro" *ngIf="formulario.get('autoria')?.errors?.['minlength']">
+      Autoria precisa ter no minimo 3 caracteres!
+    </div>
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
@@ -33,9 +37,7 @@
             id="modelo1"
             value="modelo1"
             formControlName="modelo"
-
-
-          >
+          />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -43,9 +45,11 @@
         </label>
         Prévia:
         <div class="modelo modelo1 ff-roboto-mono">
-          <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis">
-          <p class="conteudo">{{ formulario.get('conteudo')?.value }}</p>
-          <p class="autoria"><b>{{ formulario.get('autoria')?.value }}</b></p>
+          <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis" />
+          <p class="conteudo">{{ formulario.get("conteudo")?.value }}</p>
+          <p class="autoria">
+            <b>{{ formulario.get("autoria")?.value }}</b>
+          </p>
         </div>
       </div>
 
@@ -56,8 +60,7 @@
             id="modelo2"
             value="modelo2"
             formControlName="modelo"
-
-                     >
+          />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -65,9 +68,14 @@
         </label>
         Prévia:
         <div class="modelo modelo2 ff-roboto-mono">
-          <img src="../../../../assets/imagens/modelo2.png" alt="Aspas azul claro">
-          <p class="conteudo">{{ formulario.get('conteudo')?.value }}</p>
-          <p class="autoria"><b>{{ formulario.get('autoria')?.value }}</b></p>
+          <img
+            src="../../../../assets/imagens/modelo2.png"
+            alt="Aspas azul claro"
+          />
+          <p class="conteudo">{{ formulario.get("conteudo")?.value }}</p>
+          <p class="autoria">
+            <b>{{ formulario.get("autoria")?.value }}</b>
+          </p>
         </div>
       </div>
 
@@ -78,9 +86,7 @@
             id="modelo3"
             value="modelo3"
             formControlName="modelo"
-
-
-          >
+          />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -88,15 +94,25 @@
         </label>
         Prévia:
         <div class="modelo modelo3 ff-roboto-mono">
-          <img src="../../../../assets/imagens/modelo3.png" alt="Aspas verdes">
-          <p class="conteudo">{{ formulario.get('conteudo')?.value }}</p>
-          <p class="autoria"><b>{{ formulario.get('autoria')?.value }}</b></p>
+          <img
+            src="../../../../assets/imagens/modelo3.png"
+            alt="Aspas verdes"
+          />
+          <p class="conteudo">{{ formulario.get("conteudo")?.value }}</p>
+          <p class="autoria">
+            <b>{{ formulario.get("autoria")?.value }}</b>
+          </p>
         </div>
       </div>
     </div>
-   <div class="acoes">
-      <button (click)="criarPensamento()" class="botao">Salvar</button>
-      <button  (click)="cancelar()" class="botao">Cancelar</button>
+    <div class="acoes">
+      <button
+      [disabled]="!formulario.valid"
+      (click)="criarPensamento()"
+      [ngClass]="habilitarBotao()"
+      >Salvar
+    </button>
+      <button (click)="cancelar()" class="botao">Cancelar</button>
     </div>
   </form>
 </section>
